ensure switcher and label aligned on tablet/mobile

--- a/source/_static/css/switcher.css
+++ b/source/_static/css/switcher.css
@@ -12,3 +12,7 @@ div:has(.version-switcher__label) {
   display: flex;
   align-items: center;
 }
+
+.version-switcher__button {
+  margin-bottom: unset !important;
+}
